# voice-agent

./: .dockerignore  .env.example  .gitignore  DEMO_GUIDE.md  Dockerfile  QWEN.md  demo.sh  dev.js  frontend-server.js  frontend.html  generate_token.py  index.html  livekit.toml  pyproject.toml  vercel.json
api/: package-lock.json  package.json  token.js
src/: agent.py  download_piper_models.py  piper_tts_plugin.py  test_piper.py
src/livekit_voice_agent/: __init__.py
